gcc/testsuite/c-c++-common/goacc/routine-2.c
/* Test invalid use of the OpenACC 'routine' directive.  */

#pragma acc routine (nothing) gang /* { dg-error "not been declared" } */
